--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -1,3 +1,27 @@
+---
+---
+
 @import 'main';
 
 /* append your custom style below */
+#sidebar #avatar {
+    margin: auto;
+}
+#sidebar .profile-wrapper > * {
+    text-align: center;
+}
+#sidebar .profile-wrapper {
+    padding-left: 1.25em;
+    padding-right: 1.25em;
+}
+
+article {
+    header h1 {
+        font-weight: bold;
+    }
+    .content {
+        h2, h3, h4, h5, h6 {
+            font-weight: bold;
+        }
+    }
+}
