--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -140,13 +140,13 @@ layout: page
         </div>
         <ul>
             <li>
-                <img src="https://skillicons.dev/icons?i=java,kotlin,python,c,cpp,html,css,javascript"/>
+                <img src="https://skillicons.dev/icons?i=java,kotlin,python,c,cpp,html,css,javascript" alt="programming-language"/>
             </li>
             <li>
-                <img src="https://skillicons.dev/icons?i=spring,vue,nodejs,pytorch,maven,gradle,cmake,mysql,sqlite,linux" />
+                <img src="https://skillicons.dev/icons?i=spring,vue,nodejs,pytorch,maven,gradle,cmake,mysql,sqlite,linux" alt="programming-tool"/>
             </li>
             <li>
-                <img src="https://skillicons.dev/icons?i=idea,pycharm,clion,webstorm,androidstudio,vscode,visualstudio,git,vim,md" />
+                <img src="https://skillicons.dev/icons?i=idea,pycharm,clion,webstorm,androidstudio,vscode,visualstudio,git,vim,md" alt="programming-tool"/>
             </li>
         </ul>
     </div>
